# macaw-movies

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  DDB_SCHEMA.md  DOC_README.md  MainWindow.cpp  MainWindow.h  MainWindow.ui  Movies.pro  README.md  SettingsWindow.cpp  SettingsWindow.h  database.cpp  database.h  databaseManager.cpp  databaseManager.h  main.cpp
NSIS_Installer/: Macaw-Movies.nsi
doc/: doxygen.conf
linux/: macaw-movies.desktop
src/: Application.cpp  Application.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager_delete.cpp  DatabaseManager_getters.cpp  DatabaseManager_insert.cpp  DatabaseManager_update.cpp  Macaw-Movies.pro  MacawDebug.cpp  MacawDebug.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MetadataFetcher.cpp  MetadataFetcher.h  MetadataFetcherDialog.cpp  MetadataFetcherDialog.h  MetadataFetcherDialog.ui  MetadataWindow.cpp  MetadataWindow.h  MetadataWindow.ui  MovieDialog.cpp  MovieDialog.h  MovieDialog.ui  Movies.pro  MoviesDebug.cpp  MoviesDebug.h  PeopleDialog.cpp  PeopleDialog.h  PeopleDialog.ui  PeopleWindow.cpp  PeopleWindow.h  PeopleWindow.ui  ServicesManager.cpp  ServicesManager.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  (+5 more)
src/Dialogs/: MovieDialog.cpp  MovieDialog.h  MovieDialog.ui  PeopleDialog.cpp  PeopleDialog.h  PeopleDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui
src/Dialogs/SettingsDialogWidgets/: CenteredCheckbox.cpp  CenteredCheckbox.h  MoviePathsSettings.cpp  MoviePathsSettings.h  MoviePathsSettings.ui
src/Entities/: Entity.cpp  Entity.h  Episode.cpp  Episode.h  Movie.cpp  Movie.h  PathForMovies.cpp  PathForMovies.h  People.cpp  People.h  Playlist.cpp  Playlist.h  Series.cpp  Series.h  SeriesConnection.cpp  SeriesConnection.h  Show.cpp  Show.h  Tag.cpp  Tag.h
src/FetchMetadata/: FetchMetadata.cpp  FetchMetadata.h  FetchMetadataDialog.cpp  FetchMetadataDialog.h  FetchMetadataDialog.ui  FetchMetadataQuery.cpp  FetchMetadataQuery.h
src/MainWindowWidgets/: LeftPannel.cpp  LeftPannel.h  LeftPannel.ui  MainPannel.cpp  MainPannel.h  MetadataPannel.cpp  MetadataPannel.h  MetadataPannel.ui  MoviesPannel.cpp  MoviesPannel.h  MoviesPannel.ui  SeriesPannel.cpp  SeriesPannel.h  SeriesPannel.ui  ShowsPannel.cpp  ShowsPannel.h  ShowsPannel.ui
src/locales/: macaw_fr.qm  macaw_fr.ts
translate/: macaw_de.ts  macaw_fr.ts
