cmake_minimum_required(VERSION 2.8.8)
project(Macaw-Movies)
set(EXECUTABLE_NAME "macaw-movies")
find_package(Qt5 COMPONENTS Widgets Network Sql REQUIRED)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
add_subdirectory(src)
#install(TARGETS ${EXECUTABLE_OUTPUT_PATH}/${EXECUTABLE_NAME} RUNTIME DESTINATION ./bin)
